# PromptMe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: function_calling_tests.json
src/: __main__.py  constrained_decoding.py  data_validation.py  llm_model.py  parser.py
