[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "huggingface-hub>=1.19.0",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "torch>=2.12.0",
    "transformers>=5.11.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]
